[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Textures/Backgrounds/battleBG.png" type="Texture" id=1]
[ext_resource path="res://Assets/StyleBoxes/BattleMenuTheme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Textures/UI/BattleMenuBG.png" type="Texture" id=3]
[ext_resource path="res://Assets/Textures/UI/Target_empty.png" type="Texture" id=4]
[ext_resource path="res://Assets/Textures/UI/HSeparator.png" type="Texture" id=5]
[ext_resource path="res://Src/Scenes/BattleScene.gd" type="Script" id=6]
[ext_resource path="res://Assets/Fonts/lazypixie.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 10
outline_size = 2
outline_color = Color( 0.937255, 0.847059, 0.631373, 1 )
font_data = ExtResource( 7 )

[node name="BattleScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Combatants" type="Node2D" parent="."]

[node name="Positions" type="Node2D" parent="Combatants"]

[node name="PlayerPos1" type="Position2D" parent="Combatants/Positions"]
position = Vector2( 24, 92 )

[node name="PlayerPos2" type="Position2D" parent="Combatants/Positions"]
position = Vector2( 56, 92 )

[node name="PlayerPos3" type="Position2D" parent="Combatants/Positions"]
position = Vector2( 88, 92 )

[node name="EnemyPos1" type="Position2D" parent="Combatants/Positions"]
position = Vector2( 152, 92 )

[node name="EnemyPos2" type="Position2D" parent="Combatants/Positions"]
position = Vector2( 184, 92 )

[node name="EnemyPos3" type="Position2D" parent="Combatants/Positions"]
position = Vector2( 216, 92 )

[node name="Entities" type="Node2D" parent="Combatants"]

[node name="Menu" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -37.0
theme = ExtResource( 2 )
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuHBox" type="HBoxContainer" parent="Menu"]
margin_left = 32.0
margin_top = 2.0
margin_right = 214.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Moves" type="VBoxContainer" parent="Menu/MenuHBox"]
margin_right = 53.0
margin_bottom = 28.0
rect_min_size = Vector2( 53, 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Menu/MenuHBox"]
margin_left = 57.0
margin_right = 64.0
margin_bottom = 28.0
texture = ExtResource( 5 )

[node name="MoveDetails" type="VBoxContainer" parent="Menu/MenuHBox"]
margin_left = 68.0
margin_right = 128.0
margin_bottom = 28.0
rect_min_size = Vector2( 60, 0 )
custom_constants/separation = 3

[node name="DmgIndicator" type="HBoxContainer" parent="Menu/MenuHBox/MoveDetails"]
margin_right = 60.0
margin_bottom = 7.0

[node name="DmgLabel" type="Label" parent="Menu/MenuHBox/MoveDetails/DmgIndicator"]
margin_right = 18.0
margin_bottom = 7.0
text = "DMG:"
valign = 1

[node name="DmgValue" type="Label" parent="Menu/MenuHBox/MoveDetails/DmgIndicator"]
margin_left = 22.0
margin_right = 22.0
margin_bottom = 7.0

[node name="TargetIndicator" type="HBoxContainer" parent="Menu/MenuHBox/MoveDetails"]
margin_top = 10.0
margin_right = 60.0
margin_bottom = 17.0
custom_constants/separation = 3

[node name="TargetLabel" type="Label" parent="Menu/MenuHBox/MoveDetails/TargetIndicator"]
margin_right = 27.0
margin_bottom = 7.0
text = "Target:"

[node name="ReachPos1" type="TextureRect" parent="Menu/MenuHBox/MoveDetails/TargetIndicator"]
margin_left = 30.0
margin_right = 37.0
margin_bottom = 7.0
texture = ExtResource( 4 )

[node name="ReachPos2" type="TextureRect" parent="Menu/MenuHBox/MoveDetails/TargetIndicator"]
margin_left = 40.0
margin_right = 47.0
margin_bottom = 7.0
texture = ExtResource( 4 )

[node name="ReachPos3" type="TextureRect" parent="Menu/MenuHBox/MoveDetails/TargetIndicator"]
margin_left = 50.0
margin_right = 57.0
margin_bottom = 7.0
texture = ExtResource( 4 )

[node name="TypeIndicator" type="HBoxContainer" parent="Menu/MenuHBox/MoveDetails"]
margin_top = 20.0
margin_right = 60.0
margin_bottom = 27.0

[node name="TypeLabel" type="Label" parent="Menu/MenuHBox/MoveDetails/TypeIndicator"]
margin_right = 18.0
margin_bottom = 7.0
text = "Type:"

[node name="TypeValue" type="Label" parent="Menu/MenuHBox/MoveDetails/TypeIndicator"]
margin_left = 22.0
margin_right = 22.0
margin_bottom = 7.0

[node name="MoveEffect" type="VBoxContainer" parent="Menu/MenuHBox"]
margin_left = 132.0
margin_right = 186.0
margin_bottom = 28.0
rect_min_size = Vector2( 54, 0 )

[node name="EffectLabel" type="Label" parent="Menu/MenuHBox/MoveEffect"]
margin_right = 54.0
margin_bottom = 7.0
rect_min_size = Vector2( 0, 6 )
text = "Effect:"

[node name="EffectValue" type="RichTextLabel" parent="Menu/MenuHBox/MoveEffect"]
margin_top = 7.0
margin_right = 54.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 21 )
custom_constants/table_vseparation = 0
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 0
custom_constants/table_hseparation = 0
custom_constants/line_separation = 0
text = "LOREmIpsumsinevattelapescaetantecosebelle"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyDetails" type="VBoxContainer" parent="Menu/MenuHBox"]
visible = false
margin_left = 64.0
margin_right = 124.0
margin_bottom = 28.0
rect_min_size = Vector2( 60, 0 )

[node name="EnemyMoves" type="VBoxContainer" parent="Menu/MenuHBox"]
visible = false
margin_left = 128.0
margin_right = 182.0
margin_bottom = 28.0
rect_min_size = Vector2( 54, 0 )

[node name="Writings" type="Node2D" parent="."]

[node name="BattleResult" type="Label" parent="Writings"]
visible = false
margin_left = 64.0
margin_top = 8.0
margin_right = 176.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.164706, 0.113725, 0.0509804, 1 )
text = "RESULT"
align = 1
valign = 1
